--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,13 +1,13 @@
 ---
 driver:
-  name: vagrant
+  name: docker
 
 provisioner:
   name: chef_zero
 
 platforms:
   - name: ubuntu-14.04
-  - name: centos-7.1
+  #- name: centos-7.1
 
 suites:
   - name: default
